Fixes from Nick for the content overflow.

--- a/src/themes/base-v3/assets/scss/_content.scss
+++ b/src/themes/base-v3/assets/scss/_content.scss
@@ -20,6 +20,10 @@ header.page-header {
 	}
 }
 
+.inner-wrapper {
+	clear:both;
+}
+
 /*pre code {
 	display: block;
 	padding: 0.5em 1em;
